--- a/app/views/catalogController/style.css
+++ b/app/views/catalogController/style.css
@@ -4,4 +4,23 @@
     padding: 30px;
     background-color: rgba(41, 41, 41, 0.329);
 }
+.book_container a {
+    width: 100%;
+    margin: 20px 0;
+    background-color: white;
+    color: black;
+    border: none;
+    text-align: center;
+}
+
+.book_container a:hover {
+    background-color: rgba(51, 51, 51, 0.411);
+    color: white;
+    transition: background-color 0.5s,
+        color 0.5s;
+}
+
+.book_container .file .col{
+    max-width: fit-content;
+}
 
