--- a/app/views/catalogController/style.css
+++ b/app/views/catalogController/style.css
@@ -24,3 +24,60 @@
     max-width: fit-content;
 }
 
+.rating{
+    margin: 30px 100px;
+    border-top: 1px solid;
+    padding: 20px;
+}
+
+.rating-area {
+    overflow: hidden;
+    width: 150px;
+    margin-left: -17%;
+}
+
+.rating p{
+    margin: 0px;
+}
+
+.rating-area:not(:checked)>input {
+    display: none;
+}
+
+.rating-area:not(:checked)>label {
+    float: right;
+    width: 22px;
+    padding: 0;
+    cursor: pointer;
+    font-size: 22px;
+    line-height: 32px;
+    color: lightgrey;
+    text-shadow: 1px 1px #bbb;
+}
+
+.rating-area:not(:checked)>label:before {
+    content: '★';
+}
+
+.rating-area>input:checked~label {
+    color: gold;
+    text-shadow: 1px 1px #c60;
+}
+
+.rating-area:not(:checked)>label:hover,
+.rating-area:not(:checked)>label:hover~label {
+    color: gold;
+}
+
+.rating-area>input:checked+label:hover,
+.rating-area>input:checked+label:hover~label,
+.rating-area>input:checked~label:hover,
+.rating-area>input:checked~label:hover~label,
+.rating-area>label:hover~input:checked~label {
+    color: gold;
+    text-shadow: 1px 1px goldenrod;
+}
+
+.rate-area>label:active {
+    position: relative;
+}
